# supertonic_flutter

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
docs/plans/: 2026-05-10-auto-download-design.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts  proguard-rules.pro
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: supertonic_flutter.podspec
ios/Classes/: SupertonicFlutterPlugin.swift
lib/: supertonic_flutter.dart  supertonic_flutter_method_channel.dart  supertonic_flutter_platform_interface.dart  supertonic_flutter_web.dart
lib/src/: int64_tensor_helper_stub.dart  int64_tensor_helper_web.dart  model_downloader.dart  supertonic_tts.dart  tts_audio_player.dart  tts_config.dart  tts_languages.dart  tts_result.dart  tts_voices.dart
linux/: CMakeLists.txt  supertonic_flutter_plugin.cc
linux/include/supertonic_flutter/: supertonic_flutter_plugin.h
macos/: supertonic_flutter.podspec
macos/Classes/: SupertonicFlutterPlugin.swift
test/: supertonic_flutter_method_channel_test.dart
test/src/: tts_config_test.dart  tts_languages_test.dart  tts_result_test.dart  tts_voices_test.dart
(+12 files in other folders)
